# gh-updater

./: .gitignore  Cargo.toml  Dockerfile  action.yml  build.sh  package-lock.json  package.json  tsconfig.json
.circleci/: config.yml
.github/workflows/: build.yaml
src/: config.rs  index.ts  main.rs  yaml.rs
