[package]
name = "gh-updater"
version = "0.1.0"
authors = ["William Rudenmalm <me@whn.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hubcaps = "0.6"
envy = "0.4"
serde = "1.0.126"
base64 = "0.13.0"
x509-parser = "0.9.2"
tokio = { version = "1.9.0", features = ["full"] }
yaml-rust = "0.4.5"
linked-hash-map = "0.5.4"
